<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/site"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5sp"
        android:layout_marginVertical="5sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5sp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/siteName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5sp"
                android:text="@string/site_name"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/siteCoordinates"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5sp"
                android:text="@string/lattitude_longitude"
                android:textColor="@color/colorPrimaryDark"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/siteVisits"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5sp"
                android:text="@string/number_of_visits"
                android:textColor="@color/colorPrimaryDark"
                android:textAlignment="center" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>